# fastapi-python-application

./: .dockerignore  .gitignore  DockerFile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: README.md
app/: config.py  logging_config.py  main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: auth.py  lookup.py  request.py  user.py
app/core/: auth.py  security.py
app/crud/: lookup.py  request.py  user.py
app/db/: session.py
app/models/: __init__.py  lookup.py  request.py  user.py
app/schemas/: lookup.py  request.py  user.py
sql/: user.sql
src/sql/: sql-script.sql
