[tool.poetry]
name = "fastapi-python-application"
version = "0.1.0"
description = "A FastAPI application"
authors = ["Hirushiharan <hirushiharant@gmail.com>"]
license = "Apache License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.32"
databases = "^0.9.0"
alembic = "^1.13.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
pydantic = "^2.8.2"
pyodbc = "^5.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
mypy = "^1.11.2"
ruff = "^0.6.3"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
